k8s-terraform/istio-gateways/vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - "nginx.chaithanya.cloud"
  http:
    - route:
        - destination:
            host: nginx-service.default.svc.cluster.local
            subset: v1


---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: my-destination-rule

spec:
  host: nginx-service.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        app: nginx
